# Team-Project

./: nao api basics.docx
NAO_API/VS_project/: CMakeLists.txt  apidemonstration.cpp  apidemonstration.h  main.cpp  qiproject.xml  script.cpp  script.cpp.bak  testapidemonstration.cpp
NAO_API/VS_project/build-naoqi-sdk/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dependencies.cmake  helloworld.sln  helloworld.vcxproj  helloworld.vcxproj.filters  testhelloworld.vcxproj  testhelloworld.vcxproj.filters
NAO_API/VS_project/build-naoqi-sdk/helloworld.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  helloworld_d_manifest.rc  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
NAO_API/VS_project/build-naoqi-sdk/testhelloworld.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  (+4 more)
NAO_API/VS_project/build-sys-windows-amd64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  VS_project.sln  VS_project.vcxproj  VS_project.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  qitest.cmake  qitest.json  test_VS_project.vcxproj  test_VS_project.vcxproj.filters
(+70 files in other folders)
